--- a/index.html
+++ b/index.html
@@ -1,49 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Winter Arc</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Winter Arc — Wapp</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="overlay"></div>
-    <div class="hero-content">
-      <h1 class="title">Winter Arc</h1>
-      <p class="subtitle">Survive the arc. Earn the coin. Become unbreakable.</p>
-      <a href="prereg.html" class="cta-button">Enter Pre-Registration</a>
-    </div>
-  </section>
+  <div class="scene">
+    <!-- background layers -->
+    <div class="bg-layer bg-gradient"></div>
+    <canvas id="particles" class="bg-layer"></canvas>
+    <div class="bg-layer bg-noise"></div>
+    <div class="bg-overlay"></div>
 
-  <!-- Info Section -->
-  <section class="info">
-    <div class="card">
-      <h2>Winter Arc App</h2>
-      <p>Complete extreme arc challenges: cold showers, shaved head, running & more. Track stats, level up, and build your legacy.</p>
-    </div>
-    <div class="card">
-      <h2>$WTR Token</h2>
-      <p>Earn tokens by completing Winter Arc tasks. Claimable soon, usable across the ecosystem.</p>
-    </div>
-    <div class="card secret">
-      <h2>Timeline</h2>
-      <p><span class="hidden">Token Launch — Oct 1, 00:00 UTC</span></p>
-      <p><span class="hidden">App Release — Oct 1, 12:00 UTC</span></p>
-    </div>
-  </section>
+    <!-- ghost letters -->
+    <div class="ghost">WTR</div>
+  </div>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Winter Arc</p>
-    <div class="links">
-      <a href="#">Discord</a>
-      <a href="#">X</a>
-      <a href="#">Telegram</a>
+  <header class="site-header">
+    <div class="brand">
+      <div class="badge">$WTR</div>
+      <div class="brand-title">Winter Arc</div>
+    </div>
+    <nav class="nav">
+      <a href="#about">About</a>
+      <a href="#token">Token</a>
+      <a href="prereg.html" class="nav-cta">Pre-Register</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero" id="hero">
+      <div class="hero-inner">
+        <h1 class="hero-title">Winter Arc</h1>
+        <p class="hero-sub">Survive the arc. Earn $WTR. Rise through levels—this is Winter Arc.</p>
+        <div class="hero-actions">
+          <a href="prereg.html" class="btn btn-primary" id="ctaPrereg">Enter Pre-Registration</a>
+          <button class="btn btn-ghost" id="learnBtn">Learn more</button>
+        </div>
+        <div class="meta">
+          <div class="meta-item"><span class="k">App</span><span class="v">Winter Arc (Wapp)</span></div>
+          <div class="meta-item"><span class="k">Token</span><span class="v">$WTR</span></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="panel">
+      <div class="panel-inner reveal">
+        <h2>About Winter Arc</h2>
+        <p class="lead">Winter Arc is a challenge-first app blending real-life cold-edge missions with on-chain reward mechanics. Complete tasks (cold shower, run, haircut, etc.), validate your completion and earn $WTR. Track profile, timeline, levels and stats — all inside Wapp.</p>
+
+        <div class="grid cards">
+          <article class="card tilt" data-tilt>
+            <h3>Wapp — The App</h3>
+            <p>Mission feed, profile, levels, timeline and social features. Record completion, gain XP, climb leaderboards.</p>
+          </article>
+
+          <article class="card tilt" data-tilt>
+            <h3>$WTR — The Token</h3>
+            <p>Earnable token for verified missions. Designed for activity reward; claim mechanisms and use-cases will be added to the ecosystem.</p>
+          </article>
+
+          <article class="card tilt" data-tilt>
+            <h3>Economy & Claim</h3>
+            <p>Tasks mint reward credits that convert to $WTR. Claim inside the app — tokenomics focused on long-term engagement and fair distribution.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="features" class="panel alt">
+      <div class="panel-inner reveal">
+        <h2>How it works</h2>
+        <div class="feature-steps">
+          <div class="step">
+            <div class="num">1</div>
+            <div class="txt"><strong>Choose Task</strong><div class="sub">From easy to brutal — pick and accept.</div></div>
+          </div>
+          <div class="step">
+            <div class="num">2</div>
+            <div class="txt"><strong>Record & Prove</strong><div class="sub">Short evidence (photo/video) or checklist plus optional community validation.</div></div>
+          </div>
+          <div class="step">
+            <div class="num">3</div>
+            <div class="txt"><strong>Claim $WTR</strong><div class="sub">Completed tasks convert to claimable $WTR inside Wapp.</div></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="panel narrow reveal" id="cta-block">
+      <div class="panel-inner">
+        <h3>Ready to join the arc?</h3>
+        <a href="prereg.html" class="btn btn-primary large" id="joinNow">Join Pre-Register</a>
+        <p class="muted">Hidden launch info stays hidden — your spot in pre-register is what matters.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div>© Winter Arc — Built for the curious & the relentless</div>
+      <div class="social">
+        <a href="#" aria-label="Discord">Discord</a>
+        <a href="#" aria-label="X">X</a>
+        <a href="#" aria-label="Telegram">Telegram</a>
+      </div>
     </div>
   </footer>
 
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
