--- a/prereg.html
+++ b/prereg.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wapp — Winter Arc App</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Wapp — Pre-Register</title>
+  <link rel="stylesheet" href="assets/css/prereg.css" />
 </head>
 <body>
   <div class="overlay"></div>
-
-  <!-- Форма -->
-  <div class="card form">
+  <div class="form-container">
     <h1>Wapp Pre-Register</h1>
     <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
       <div class="form-group">
@@ -28,16 +26,9 @@
       <div class="msg" id="msg"></div>
       <button type="submit" class="btn">Submit</button>
     </form>
+    <div class="back"><a href="index.html">← Back to home</a></div>
   </div>
 
-  <!-- Успех -->
-  <div class="card success" id="success">
-    <div class="circle">
-      <svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg>
-    </div>
-    <div class="success-text">Successful Registration</div>
-  </div>
-
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/prereg.js"></script>
 </body>
 </html>
