--- a/prereg.html
+++ b/prereg.html
@@ -1,32 +1,38 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Wapp — Pre-Register</title>
-  <link rel="stylesheet" href="assets/css/prereg.css" />
+  <link rel="stylesheet" href="assets/css/prereg.css">
 </head>
 <body>
   <div class="overlay"></div>
+
   <div class="form-container">
     <h1>Wapp Pre-Register</h1>
     <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
       <div class="form-group">
         <label for="nickname">Nickname</label>
-        <input type="text" id="nickname" name="nickname" placeholder="Nickname" required>
+        <input type="text" id="nickname" name="nickname" placeholder="Nickname">
       </div>
       <div class="form-group">
         <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" placeholder="E-mail" required>
+        <input type="email" id="email" name="email" placeholder="E-mail">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password" required>
+        <input type="password" id="password" name="password" placeholder="Password">
       </div>
-      <div class="msg" id="msg"></div>
+
+      <div class="error-message" id="errorMessage"></div>
       <button type="submit" class="btn">Submit</button>
     </form>
-    <div class="back"><a href="index.html">← Back to home</a></div>
+  </div>
+
+  <div class="success" id="success">
+    <div class="circle"><svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg></div>
+    <div class="success-text">Successful Registration</div>
   </div>
 
   <script src="assets/js/prereg.js"></script>
