--- a/index.html
+++ b/index.html
@@ -1,78 +1,128 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Winter Arc</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Winter Arc — Wapp</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <!-- Hero Section -->
-  <section class="hero">
-    <canvas id="snow"></canvas>
-    <div class="hero-content">
-      <h1 class="title">Winter Arc</h1>
-      <p class="subtitle">Survive the arc. Earn the coin. Become unbreakable.</p>
-      <a href="prereg.html" class="cta-button">Enter Pre-Registration</a>
-    </div>
-    <!-- Wave transition -->
-    <div class="wave" aria-hidden="true">
-      <svg viewBox="0 0 1440 320">
-        <path fill="#111" fill-opacity="1"
-          d="M0,160L80,181.3C160,203,320,245,480,229.3C640,213,800,139,960,106.7C1120,75,1280,85,1360,90.7L1440,96L1440,320L0,320Z">
-        </path>
-      </svg>
-    </div>
-  </section>
+  <div class="bg-wrap">
+    <img class="bg-img" src="assets/images/background.jpeg" alt="background">
+    <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
+    <div class="noise"></div>
+    <div class="ghost">WTR</div>
+  </div>
 
-  <!-- Info Section -->
-  <section class="info">
-    <div class="card">
-      <span class="icon">❄️</span>
-      <h2>Winter Arc App</h2>
-      <p>Challenge yourself with cold showers, running, shaved head & more. Track stats, level up, and build your Winter legacy.</p>
+  <header class="site-header">
+    <div class="brand">
+      <div class="badge">$WTR</div>
+      <div class="brand-title">Winter Arc</div>
     </div>
-    <div class="card">
-      <span class="icon">⚡</span>
-      <h2>$WTR Coin</h2>
-      <p>Earn $WTR tokens for completing Winter Arc challenges. Claimable after launch and tradable in our ecosystem.</p>
-    </div>
-  </section>
+    <nav class="nav">
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#token">Token</a>
+      <a class="nav-cta" href="prereg.html">Pre-Register</a>
+    </nav>
+  </header>
 
-  <!-- How it works -->
-  <section class="steps">
-    <h2>How it Works</h2>
-    <div class="step-container">
-      <div class="step">
-        <h3>01</h3>
-        <p>Join the Winter Arc and start your journey.</p>
+  <main>
+    <section class="hero">
+      <div class="hero-inner">
+        <h1 class="hero-title">Winter Arc</h1>
+        <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
+
+        <div class="hero-actions">
+          <a id="ctaPrereg" class="btn-primary" href="prereg.html">Enter Pre-Registration</a>
+          <button id="learnBtn" class="btn-ghost">Learn more</button>
+        </div>
+
+        <div class="hero-meta">
+          <div class="meta">
+            <span class="meta-key">App</span>
+            <span class="meta-val">Wapp — Winter Arc</span>
+          </div>
+          <div class="meta">
+            <span class="meta-key">Token</span>
+            <span class="meta-val">$WTR</span>
+          </div>
+        </div>
       </div>
-      <div class="step">
-        <h3>02</h3>
-        <p>Complete extreme arc challenges every day.</p>
+    </section>
+
+    <section id="about" class="panel">
+      <div class="panel-inner">
+        <h2 class="panel-title">What is Winter Arc?</h2>
+        <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
+
+        <div class="cards">
+          <article class="card interactive" data-tilt>
+            <div class="card-icon">❄️</div>
+            <h3>Arc Challenges</h3>
+            <p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards.</p>
+          </article>
+
+          <article class="card interactive" data-tilt>
+            <div class="card-icon">📊</div>
+            <h3>Profile & Stats</h3>
+            <p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards.</p>
+          </article>
+
+          <!-- third card replaced by "Ecosystem" -->
+          <article class="card interactive" data-tilt>
+            <div class="card-icon">🔗</div>
+            <h3>Ecosystem</h3>
+            <p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community).</p>
+          </article>
+        </div>
       </div>
-      <div class="step">
-        <h3>03</h3>
-        <p>Earn tokens, grow your stats, and level up.</p>
+    </section>
+
+    <section id="token" class="panel alt">
+      <div class="panel-inner">
+        <h2 class="panel-title">Token — $WTR</h2>
+        <p class="panel-text">$WTR is earned by completing tasks in Wapp. Tokens are designed to reward activity and growth. Tokenomics and claim process will be communicated to preregistred users first.</p>
+
+        <ul class="token-list">
+          <li><strong>Name</strong><span>Winter Arc Coin</span></li>
+          <li><strong>Symbol</strong><span>$WTR</span></li>
+          <li><strong>Purpose</strong><span>Rewards, in-app economy, staking & future utilities</span></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="principles panel">
+      <div class="panel-inner">
+        <h2 class="panel-title">Principles</h2>
+        <div class="principles-grid">
+          <div class="principle">
+            <h4>Authenticity</h4>
+            <p>Real tasks, real proof, real progression.</p>
+          </div>
+          <div class="principle">
+            <h4>Merit</h4>
+            <p>Rewards are based on difficulty, consistency and community validation.</p>
+          </div>
+          <div class="principle">
+            <h4>Community</h4>
+            <p>Shared challenges, leaderboards, seasonal events.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div>© 2025 Winter Arc</div>
+      <div class="links">
+        <a href="#">Discord</a>
+        <a href="#">X</a>
+        <a href="#">Telegram</a>
       </div>
     </div>
-  </section>
-
-  <!-- Community -->
-  <section class="community">
-    <h2>Join the Community</h2>
-    <div class="socials">
-      <a href="#" class="social discord">Discord</a>
-      <a href="#" class="social twitter">X</a>
-      <a href="#" class="social telegram">Telegram</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Winter Arc</p>
   </footer>
 
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
