--- a/prereg.html
+++ b/prereg.html
@@ -31,7 +31,9 @@
   </div>
 
   <div class="success" id="success">
-    <div class="circle"><svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg></div>
+    <div class="circle">
+      <svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg>
+    </div>
     <div class="success-text">Successful Registration</div>
   </div>
 
