--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Winter Arc — Wapp</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
   <div class="bg-wrap">
@@ -31,21 +31,13 @@
       <div class="hero-inner">
         <h1 class="hero-title">Winter Arc</h1>
         <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
-
         <div class="hero-actions">
           <a id="ctaPrereg" class="btn-primary" href="prereg.html">Enter Pre-Registration</a>
           <button id="learnBtn" class="btn-ghost">Learn more</button>
         </div>
-
         <div class="hero-meta">
-          <div class="meta">
-            <span class="meta-key">App</span>
-            <span class="meta-val">Wapp — Winter Arc</span>
-          </div>
-          <div class="meta">
-            <span class="meta-key">Token</span>
-            <span class="meta-val">$WTR</span>
-          </div>
+          <div class="meta"><span class="meta-key">App</span><span class="meta-val">Wapp — Winter Arc</span></div>
+          <div class="meta"><span class="meta-key">Token</span><span class="meta-val">$WTR</span></div>
         </div>
       </div>
     </section>
@@ -54,25 +46,10 @@
       <div class="panel-inner">
         <h2 class="panel-title">What is Winter Arc?</h2>
         <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
-
         <div class="cards">
-          <article class="card interactive" data-tilt>
-            <div class="card-icon">❄️</div>
-            <h3>Arc Challenges</h3>
-            <p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards.</p>
-          </article>
-
-          <article class="card interactive" data-tilt>
-            <div class="card-icon">📊</div>
-            <h3>Profile & Stats</h3>
-            <p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards.</p>
-          </article>
-
-          <article class="card interactive" data-tilt>
-            <div class="card-icon">🔗</div>
-            <h3>Ecosystem</h3>
-            <p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community).</p>
-          </article>
+          <article class="card interactive" data-tilt><div class="card-icon">❄️</div><h3>Arc Challenges</h3><p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards.</p></article>
+          <article class="card interactive" data-tilt><div class="card-icon">📊</div><h3>Profile & Stats</h3><p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards.</p></article>
+          <article class="card interactive" data-tilt><div class="card-icon">🔗</div><h3>Ecosystem</h3><p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community).</p></article>
         </div>
       </div>
     </section>
@@ -81,7 +58,6 @@
       <div class="panel-inner">
         <h2 class="panel-title">Token — $WTR</h2>
         <p class="panel-text">$WTR is earned by completing tasks in Wapp. Tokens are designed to reward activity and growth. Tokenomics and claim process will be communicated to preregistred users first.</p>
-
         <ul class="token-list">
           <li><strong>Name</strong><span>Winter Arc Coin</span></li>
           <li><strong>Symbol</strong><span>$WTR</span></li>
@@ -94,18 +70,9 @@
       <div class="panel-inner">
         <h2 class="panel-title">Principles</h2>
         <div class="principles-grid">
-          <div class="principle">
-            <h4>Authenticity</h4>
-            <p>Real tasks, real proof, real progression.</p>
-          </div>
-          <div class="principle">
-            <h4>Merit</h4>
-            <p>Rewards are based on difficulty, consistency and community validation.</p>
-          </div>
-          <div class="principle">
-            <h4>Community</h4>
-            <p>Shared challenges, leaderboards, seasonal events.</p>
-          </div>
+          <div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div>
+          <div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div>
+          <div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div>
         </div>
       </div>
     </section>
@@ -122,6 +89,6 @@
     </div>
   </footer>
 
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.min.js"></script>
 </body>
 </html>
