--- a/prereg.html
+++ b/prereg.html
@@ -1,36 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Wapp — Pre-Register</title>
-  <link rel="stylesheet" href="assets/css/prereg.min.css">
-</head>
-<body>
-  <div class="overlay"></div>
-  <div class="form-container">
-    <h1>Wapp Pre-Register</h1>
-    <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
-      <div class="form-group">
-        <label for="nickname">Nickname</label>
-        <input type="text" id="nickname" name="nickname" placeholder="Nickname">
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" placeholder="E-mail">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password">
-      </div>
-      <div class="error-message" id="errorMessage"></div>
-      <button type="submit" class="btn">Submit</button>
-    </form>
-  </div>
-  <div class="success" id="success">
-    <div class="circle"><svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg></div>
-    <div class="success-text">Successful Registration</div>
-  </div>
-  <script src="assets/js/prereg.min.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Wapp — Pre-Register</title><link rel="stylesheet" href="assets/css/prereg.min.css"></head><body><div class="overlay"></div><div class="form-container"><h1>Wapp Pre-Register</h1><form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate><div class="form-group"><label for="nickname">Nickname</label><input type="text" id="nickname" name="nickname" placeholder="Nickname"></div><div class="form-group"><label for="email">E-mail</label><input type="email" id="email" name="email" placeholder="E-mail"></div><div class="form-group"><label for="password">Password</label><input type="password" id="password" name="password" placeholder="Password"></div><div class="error-message" id="errorMessage"></div><button type="submit" class="btn btn-full">Submit</button></form></div><div class="success" id="success"><div class="circle"><svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg></div><div class="success-text">Successful Registration</div></div><script src="assets/js/prereg.min.js"></script></body></html>
