--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Winter Arc — Wapp</title><link rel="stylesheet" href="assets/css/style.min.css"></head><body><div class="bg-wrap"><img class="bg-img" src="assets/images/background.jpeg" alt="background"><canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas><div class="noise"></div><div class="ghost">WTR</div></div><header class="site-header"><div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div><nav class="nav"><a class="nav-link" href="#about">About</a><a class="nav-link" href="#token">Token</a><a class="nav-cta" href="prereg.html">Pre-Register</a></nav></header><main><section class="hero"><div class="hero-inner"><h1 class="hero-title">Winter Arc</h1><p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p><div class="hero-actions"><a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a></div></div></section><section id="about" class="panel"><div class="panel-inner"><h2 class="panel-title">What is Winter Arc?</h2><p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p><div class="cards"><article class="card interactive" data-tilt><div class="card-icon">❄️</div><h3>Arc Challenges</h3><p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards.</p></article><article class="card interactive" data-tilt><div class="card-icon">📊</div><h3>Profile & Stats</h3><p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards.</p></article><article class="card interactive" data-tilt><div class="card-icon">🔗</div><h3>Ecosystem</h3><p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community).</p></article></div></div></section><section id="token" class="panel alt"><div class="panel-inner"><h2 class="panel-title">Token — $WTR</h2><p class="panel-text">$WTR is earned by completing tasks in Wapp. Tokens are designed to reward activity and growth. Tokenomics and claim process will be communicated to preregistred users first.</p><ul class="token-list"><li><strong>Name</strong><span>Winter Arc Coin</span></li><li><strong>Symbol</strong><span>$WTR</span></li><li><strong>Purpose</strong><span>Rewards, in-app economy, staking & future utilities</span></li></ul></div></section><section class="principles panel"><div class="panel-inner"><h2 class="panel-title">Principles</h2><div class="principles-grid"><div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div><div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div><div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div></div></div></section></main><footer class="site-footer"><div class="footer-inner"><div>© 2025 Winter Arc</div><div class="links"><a href="https://t.me/winterarc" target="_blank">Telegram</a><a href="https://x.com/winterarc" target="_blank">X</a><a href="https://instagram.com/winterarc" target="_blank">Instagram</a></div></div></footer><script src="assets/js/main.min.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Wapp</title>
+  <link rel="stylesheet" href="assets/css/index.min.css">
+</head>
+<body>
+  <div class="overlay"></div>
+  <div class="hero">
+    <h1 class="title">Welcome to Wapp</h1>
+    <a href="prereg.html" class="btn btn-full">Pre-Register</a>
+    <div class="socials">
+      <a href="https://x.com/wtr_coin" target="_blank">X</a>
+      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
+      <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
+    </div>
+  </div>
+  <script src="assets/js/index.min.js"></script>
+</body>
+</html>
