--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Wapp</title>
-  <link rel="stylesheet" href="assets/css/index.min.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
   <div class="overlay"></div>
@@ -17,6 +17,6 @@
       <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
     </div>
   </div>
-  <script src="assets/js/index.min.js"></script>
+  <script src="assets/js/main.min.js"></script>
 </body>
 </html>
