--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Wapp</title>
+  <title>Wapp — Pre-Register</title>
   <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-  <div class="overlay"></div>
   <div class="hero">
-    <h1 class="title">Welcome to Wapp</h1>
-    <a href="prereg.html" class="btn btn-full">Pre-Register</a>
-    <div class="socials">
-      <a href="https://x.com/wtr_coin" target="_blank">X</a>
-      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-      <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
+    <div class="hero-content">
+      <h1>Wapp</h1>
+      <p class="subtitle">The Future of Messaging</p>
+      <a href="prereg.html" class="btn prereg-btn">Pre-Register</a>
+      <div class="socials">
+        <a href="https://x.com/wtr_coin" target="_blank">X</a>
+        <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
+        <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
+      </div>
     </div>
   </div>
   <script src="assets/js/main.min.js"></script>
