--- a/prereg.html
+++ b/prereg.html
@@ -11,18 +11,9 @@
   <div class="form-container">
     <h1>Wapp Pre-Register</h1>
     <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
-      <div class="form-group">
-        <label for="nickname">Nickname</label>
-        <input type="text" id="nickname" name="nickname" placeholder="Nickname">
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" placeholder="E-mail">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password">
-      </div>
+      <div class="form-group"><label for="nickname">Nickname</label><input type="text" id="nickname" name="nickname" placeholder="Nickname"></div>
+      <div class="form-group"><label for="email">E-mail</label><input type="email" id="email" name="email" placeholder="E-mail"></div>
+      <div class="form-group"><label for="password">Password</label><input type="password" id="password" name="password" placeholder="Password"></div>
       <div class="error-message" id="errorMessage"></div>
       <button type="submit" class="btn btn-full">Submit</button>
     </form>
