--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <article class="card interactive" data-tilt>
           <div class="card-icon">❄️</div>
           <h3>Arc Challenges</h3>
-          <p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards.</p>
+          <p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards. Push your limits creatively!</p>
         </article>
         <article class="card interactive" data-tilt>
           <div class="card-icon">📊</div>
           <h3>Profile & Stats</h3>
-          <p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards.</p>
+          <p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards. Visualize your journey dynamically.</p>
         </article>
         <article class="card interactive" data-tilt>
           <div class="card-icon">🔗</div>
           <h3>Ecosystem</h3>
-          <p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community).</p>
+          <p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community). Connect creatively with others.</p>
         </article>
       </div>
     </div>
@@ -79,15 +79,15 @@
       <div class="principles-grid">
         <div class="principle">
           <h4>Authenticity</h4>
-          <p>Real tasks, real proof, real progression. 🧊 Challenge yourself creatively!</p>
+          <p>Real tasks, real proof, real progression. Experience challenges in a creative way.</p>
         </div>
         <div class="principle">
           <h4>Merit</h4>
-          <p>Rewards are based on difficulty, consistency and community validation. 💎 Earn badges and unique ranks.</p>
+          <p>Rewards are based on difficulty, consistency and community validation. Level up with flair.</p>
         </div>
         <div class="principle">
           <h4>Community</h4>
-          <p>Shared challenges, leaderboards, seasonal events. 🤝 Collaborate & compete globally.</p>
+          <p>Shared challenges, leaderboards, seasonal events. Collaborate and innovate together.</p>
         </div>
       </div>
     </div>
