--- a/prereg.html
+++ b/prereg.html
@@ -8,47 +8,20 @@
 </head>
 <body>
 <div class="overlay"></div>
-
 <div class="form-container">
-  <h1>Wapp Pre-Register</h1>
-  <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
-    <div class="form-group">
-      <label for="nickname">Nickname</label>
-      <input type="text" id="nickname" name="nickname" placeholder="Nickname">
-    </div>
-    <div class="form-group">
-      <label for="email">E-mail</label>
-      <input type="email" id="email" name="email" placeholder="E-mail">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" placeholder="Password">
-    </div>
-    <div class="error-message" id="errorMessage"></div>
-    <button type="submit" class="btn btn-full">Submit</button>
-  </form>
+<h1>Wapp Pre-Register</h1>
+<form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
+<div class="form-group"><label for="nickname">Nickname</label><input type="text" id="nickname" name="nickname" placeholder="Nickname"></div>
+<div class="form-group"><label for="email">E-mail</label><input type="email" id="email" name="email" placeholder="E-mail"></div>
+<div class="form-group"><label for="password">Password</label><input type="password" id="password" name="password" placeholder="Password"></div>
+<div class="error-message" id="errorMessage"></div>
+<button type="submit" class="btn btn-full">Submit</button>
+</form>
 </div>
-
 <div class="success" id="success">
-  <div class="circle">
-    <svg viewBox="0 0 52 52">
-      <path d="M14 27 L22 35 L38 19"></path>
-    </svg>
-  </div>
-  <div class="success-text">Successful Registration</div>
+<div class="circle"><svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg></div>
+<div class="success-text">Successful Registration</div>
 </div>
-
-<footer class="site-footer">
-  <div class="footer-inner">
-    <div>© 2025 Winter Arc</div>
-    <div class="links">
-      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-      <a href="https://x.com/wtr_coin" target="_blank">X</a>
-      <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
-    </div>
-  </div>
-</footer>
-
 <script src="assets/js/prereg.min.js"></script>
 </body>
 </html>
