--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <section id="about" class="panel">
-    <div class="panel-inner">
+    <div class="panel-inner interactive-block" data-tilt>
       <h2 class="panel-title">What is Winter Arc?</h2>
       <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
       <div class="cards">
@@ -62,7 +62,7 @@
   </section>
 
   <section id="token" class="panel alt">
-    <div class="panel-inner">
+    <div class="panel-inner interactive-block" data-tilt>
       <h2 class="panel-title">Token — $WTR</h2>
       <p class="panel-text">$WTR is earned by completing tasks in Wapp. Tokens are designed to reward activity and growth. Tokenomics and claim process will be communicated to preregistered users first.</p>
       <ul class="token-list">
@@ -74,7 +74,7 @@
   </section>
 
   <section class="principles panel">
-    <div class="panel-inner">
+    <div class="panel-inner interactive-block" data-tilt>
       <h2 class="panel-title">Principles</h2>
       <div class="principles-grid">
         <div class="principle">
