--- a/index.html
+++ b/index.html
@@ -20,78 +20,16 @@
     <div class="brand-title">Winter Arc</div>
   </div>
   <nav class="nav">
-    <a class="nav-link" href="#about">About</a>
-    <a class="nav-link" href="#token">Token</a>
     <a class="nav-cta" href="prereg.html">Pre-Register</a>
   </nav>
 </header>
 
-<main>
-  <section class="hero">
-    <div class="hero-inner">
-      <h1 class="hero-title">Winter Arc</h1>
-      <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
-      <div class="hero-actions">
-        <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="about" class="panel">
-    <div class="panel-inner interactive-block" data-tilt>
-      <h2 class="panel-title">What is Winter Arc?</h2>
-      <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
-      <div class="cards">
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">❄️</div>
-          <h3>Arc Challenges</h3>
-          <p>Micro & macro tasks: cold showers, runs, radical lifestyle challenges. Verified by short proof to claim rewards. Push your limits creatively!</p>
-        </article>
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">📊</div>
-          <h3>Profile & Stats</h3>
-          <p>Leveling, timeline, streaks and performance metrics. Climb seasons, unlock tiers and rare rewards. Visualize your journey dynamically.</p>
-        </article>
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">🔗</div>
-          <h3>Ecosystem</h3>
-          <p>$WTR works as an in-app reward token. Earn, claim, and later use or trade (details released to community). Connect creatively with others.</p>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <section id="token" class="panel alt">
-    <div class="panel-inner interactive-block" data-tilt>
-      <h2 class="panel-title">Token — $WTR</h2>
-      <p class="panel-text">$WTR is earned by completing tasks in Wapp. Tokens are designed to reward activity and growth. Tokenomics and claim process will be communicated to preregistered users first.</p>
-      <ul class="token-list">
-        <li><strong>Name</strong><span>Winter Arc Coin</span></li>
-        <li><strong>Symbol</strong><span>$WTR</span></li>
-        <li><strong>Purpose</strong><span>Rewards, in-app economy, staking & future utilities</span></li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="principles panel">
-    <div class="panel-inner interactive-block" data-tilt>
-      <h2 class="panel-title">Principles</h2>
-      <div class="principles-grid">
-        <div class="principle">
-          <h4>Authenticity</h4>
-          <p>Real tasks, real proof, real progression. Experience challenges in a creative way.</p>
-        </div>
-        <div class="principle">
-          <h4>Merit</h4>
-          <p>Rewards are based on difficulty, consistency and community validation. Level up with flair.</p>
-        </div>
-        <div class="principle">
-          <h4>Community</h4>
-          <p>Shared challenges, leaderboards, seasonal events. Collaborate and innovate together.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+<main class="coming-soon">
+  <div class="coming-soon-text">
+    <h1>COMING SOON</h1>
+    <p>Winter Arc is loading... get ready to survive the arc!</p>
+    <a class="btn-primary btn-full" href="prereg.html">Pre-Register Now</a>
+  </div>
 </main>
 
 <footer class="site-footer">
