--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Winter Arc — Wapp</title>
+<title>Winter Arc — Coming Soon</title>
 <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
+
 <div class="bg-wrap">
   <img class="bg-img" src="assets/images/background.jpeg" alt="background">
   <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
@@ -24,12 +25,12 @@
   </nav>
 </header>
 
-<main class="coming-soon">
-  <div class="coming-soon-text">
-    <h1>COMING SOON</h1>
-    <p>Winter Arc is loading... get ready to survive the arc!</p>
-    <a class="btn-primary btn-full" href="prereg.html">Pre-Register Now</a>
-  </div>
+<main>
+  <section class="hero">
+    <div class="hero-inner" style="padding:0; background:none;">
+      <h1 class="hero-title" style="font-size:clamp(60px,12vw,120px); color:#fff; text-shadow:0 0 20px rgba(154,123,214,0.6);">COMING SOON</h1>
+    </div>
+  </section>
 </main>
 
 <footer class="site-footer">
