--- a/index.html
+++ b/index.html
@@ -1,158 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Winter Arc — Coming Soon</title>
-<link rel="stylesheet" href="assets/css/style.min.css">
-</head>
-<body>
-
-<div class="bg-wrap">
-  <img class="bg-img" src="assets/images/background.jpeg" alt="background">
-  <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
-  <div class="noise"></div>
-  <div class="ghost">WTR</div>
-</div>
-
-<header class="site-header">
-  <div class="brand">
-    <div class="badge">$WTR</div>
-    <div class="brand-title">Winter Arc</div>
-  </div>
-  <nav class="nav">
-    <a class="nav-cta" href="prereg.html">Pre-Register</a>
-  </nav>
-</header>
-
-<main>
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero-inner" style="padding:0; background:none;">
-      <h1 class="hero-title" style="font-size:clamp(60px,12vw,120px); color:#fff; text-shadow:0 0 20px rgba(154,123,214,0.6);">COMING SOON</h1>
-    </div>
-  </section>
-
-  <!-- Winter Arc Highlights -->
-  <section class="panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">Winter Arc Highlights</h2>
-      <p class="panel-text">Get ready for an activity-driven app where challenges turn into $WTR rewards!</p>
-      <div class="cards">
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">❄️</div>
-          <h3>Arc Challenges</h3>
-          <p>Cold showers, runs, radical lifestyle tasks. Earn tokens for verified completion. Track your progress and streaks!</p>
-        </article>
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">📊</div>
-          <h3>Profile & Stats</h3>
-          <p>Level up your profile, see timelines, leaderboard rankings and unlock seasonal rewards. Growth has never been this fun!</p>
-        </article>
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">🔗</div>
-          <h3>$WTR Ecosystem</h3>
-          <p>$WTR tokens are your in-app currency. Earn, claim, trade, and explore future utilities.</p>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- Principles -->
-  <section class="principles panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">Principles</h2>
-      <div class="principles-grid">
-        <div class="principle">
-          <h4>Authenticity</h4>
-          <p>Real tasks, real proof, real progression.</p>
-        </div>
-        <div class="principle">
-          <h4>Merit</h4>
-          <p>Rewards are based on difficulty, consistency and community validation.</p>
-        </div>
-        <div class="principle">
-          <h4>Community</h4>
-          <p>Shared challenges, leaderboards, seasonal events.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Roadmap -->
-  <section class="panel alt">
-    <div class="panel-inner">
-      <h2 class="panel-title">Roadmap</h2>
-      <div class="roadmap">
-        <div class="step"><strong>Q1 2025</strong><span>Launch Arc Challenges</span></div>
-        <div class="step"><strong>Q2 2025</strong><span>Seasonal Rewards & Leaderboards</span></div>
-        <div class="step"><strong>Q3 2025</strong><span>$WTR Trading & Marketplace</span></div>
-        <div class="step"><strong>Q4 2025</strong><span>Staking & Advanced Features</span></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- How It Works -->
-  <section class="panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">How It Works</h2>
-      <div class="cards">
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">📝</div>
-          <h3>Register</h3>
-          <p>Sign up to start your Arc journey and unlock the $WTR economy.</p>
-        </article>
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">🏃‍♂️</div>
-          <h3>Complete Tasks</h3>
-          <p>Take on Arc challenges and prove your progress with quick verification.</p>
-        </article>
-        <article class="card interactive" data-tilt>
-          <div class="card-icon">💰</div>
-          <h3>Claim $WTR</h3>
-          <p>Earn $WTR tokens and watch your profile grow. Use, trade, or stake in-app.</p>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- Community -->
-  <section class="panel alt">
-    <div class="panel-inner">
-      <h2 class="panel-title">Community Driven</h2>
-      <p class="panel-text">Join a growing community of Arc adventurers. Collaborate, compete, and rise together.</p>
-      <div class="team-grid">
-        <div class="team-member">🌟</div>
-        <div class="team-member">🔥</div>
-        <div class="team-member">❄️</div>
-        <div class="team-member">⚡</div>
-        <div class="team-member">🌌</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="panel cta">
-    <div class="panel-inner" style="text-align:center;">
-      <h2 class="panel-title">Ready to survive the Arc?</h2>
-      <p class="panel-text">Join Winter Arc now and start earning $WTR!</p>
-      <a href="prereg.html" class="btn-primary btn-full">Pre-Register Now</a>
-    </div>
-  </section>
-
-</main>
-
-<footer class="site-footer">
-  <div class="footer-inner">
-    <div>© 2025 Winter Arc</div>
-    <div class="links">
-      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-      <a href="https://x.com/wtr_coin" target="_blank">X</a>
-      <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
-    </div>
-  </div>
-</footer>
-
-<script src="assets/js/main.min.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Winter Arc — Coming Soon</title><link rel="stylesheet" href="assets/css/style.min.css"></head><body><div class="bg-wrap"><img class="bg-img" src="assets/images/background.jpeg" alt="background"><canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas><div class="noise"></div><div class="ghost">WTR</div></div><header class="site-header"><div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div><nav class="nav"><a class="nav-cta" href="prereg.html">Pre-Register</a></nav></header><main><section class="hero"><div class="hero-inner" style="padding:0; background:none;"><h1 class="hero-title" style="font-size:clamp(60px,12vw,120px); color:#fff; text-shadow:0 0 20px rgba(154,123,214,0.6);">COMING SOON</h1></div></section><section class="panel"><div class="panel-inner"><h2 class="panel-title">Winter Arc Highlights</h2><p class="panel-text">Get ready for an activity-driven app where challenges turn into $WTR rewards!</p><div class="cards"><article class="card interactive" data-tilt><div class="card-icon">❄️</div><h3>Arc Challenges</h3><p>Cold showers, runs, radical lifestyle tasks. Earn tokens for verified completion. Track your progress and streaks!</p></article><article class="card interactive" data-tilt><div class="card-icon">📊</div><h3>Profile & Stats</h3><p>Level up your profile, see timelines, leaderboard rankings and unlock seasonal rewards. Growth has never been this fun!</p></article><article class="card interactive" data-tilt><div class="card-icon">🔗</div><h3>$WTR Ecosystem</h3><p>$WTR tokens are your in-app currency. Earn, claim, trade, and explore future utilities.</p></article></div></div></section><section class="principles panel"><div class="panel-inner"><h2 class="panel-title">Principles</h2><div class="principles-grid"><div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div><div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div><div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div></div></div></section><section class="panel alt"><div class="panel-inner"><h2 class="panel-title">Roadmap</h2><div class="roadmap"><div class="step"><strong>Q1 2025</strong><span>Launch Arc Challenges</span></div><div class="step"><strong>Q2 2025</strong><span>Seasonal Rewards & Leaderboards</span></div><div class="step"><strong>Q3 2025</strong><span>$WTR Trading & Marketplace</span></div><div class="step"><strong>Q4 2025</strong><span>Staking & Advanced Features</span></div></div></div></section><section class="panel"><div class="panel-inner"><h2 class="panel-title">How It Works</h2><div class="cards"><article class="card interactive" data-tilt><div class="card-icon">📝</div><h3>Register</h3><p>Sign up to start your Arc journey and unlock the $WTR economy.</p></article><article class="card interactive" data-tilt><div class="card-icon">🏃‍♂️</div><h3>Complete Tasks</h3><p>Take on Arc challenges and prove your progress with quick verification.</p></article><article class="card interactive" data-tilt><div class="card-icon">💰</div><h3>Claim $WTR</h3><p>Earn $WTR tokens and watch your profile grow. Use, trade, or stake in-app.</p></article></div></div></section><section class="panel alt"><div class="panel-inner"><h2 class="panel-title">Community Driven</h2><p class="panel-text">Join a growing community of Arc adventurers. Collaborate, compete, and rise together.</p><div class="team-grid"><div class="team-member">🌟</div><div class="team-member">🔥</div><div class="team-member">❄️</div><div class="team-member">⚡</div><div class="team-member">🌌</div></div></div></section><section class="panel cta"><div class="panel-inner" style="text-align:center;"><h2 class="panel-title">Ready to survive the Arc?</h2><p class="panel-text">Join Winter Arc now and start earning $WTR!</p><a href="prereg.html" class="btn-primary btn-full">Pre-Register Now</a></div></section></main><footer class="site-footer"><div class="footer-inner"><div>© 2025 Winter Arc</div><div class="links"><a href="https://t.me/wtrcoin" target="_blank">Telegram</a><a href="https://x.com/wtr_coin" target="_blank">X</a><a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a></div></div></footer><script src="assets/js/main.min.js"></script></body></html>
